--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,7 @@ authors = ["mansurarief <ariefm@stanford.edu>", "riyakinnarkar <riyakinnarkar@gm
 version = "0.1.0"
 
 [deps]
+POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
+POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
